@@ -19,4 +19,6 @@
         />
   </class>
 
+  <adapter factory=".browser.form.DatetimeDataConverter" />
+
 </configure>
