@@ -12,6 +12,10 @@ Features
   provide roles which do not allow to access the persons in the address
   book.
 
+- Added ability to user preferences to set current time zone. Datetimes,
+  e. g. creation date and modification date, are converted to the selected
+  time zone. Default is UTC.
+
 - Added number of displayed persons in search result handler which displays
   the names of the selected persons (new in 1.9.0).
 
